// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAddresses should render in error state 1`] = `
<div>
  <span
    data-test="addresses-error"
  >
    Error
  </span>
</div>
`;

exports[`useAddresses should render in loading state 1`] = `
<div>
  <span
    data-test="addresses-loading"
  >
    yes
  </span>
</div>
`;
